k8s-advanced/kubernetes/overlays/stg/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slack-metrics-api
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: api
          image: 123456789012.dkr.ecr.ap-northeast-1.amazonaws.com/slack-metrics-api:latest
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
