k8s-advanced/kubernetes/overlays/stg/networkpolicy-patch.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: slack-metrics-api-netpol
spec:
  ingress:
    - {}
  egress:
    - {}
